/* -------------------------------------------------------------------------- */

syntax = "proto2";

package nefit;
option java_package = "nefit.proto";
option java_outer_classname = "NefitProtos";

/* -------------------------------------------------------------------------- */

message MsgAuth {
	required string name = 1;
	required string pass = 2;

	enum ClientType {
        MANUFACTOR = 0;
    	IMPORTER = 1;
    }
    required ClientType ctype = 3;

	enum MsgType {
		LOGIN = 0;
		REGISTER = 1;
	}
	optional MsgType mtype = 4 [default = LOGIN];
}

message MsgAck {
    required bool ok = 1;
    optional string msg = 2;
}

message DisponibilityS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}

message DisponibilityN {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}

message OrderS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 quant = 3;
    required int32 value = 4;
}

message OrderN {
    required string nameM = 1;
    required string nameP = 2;
    required int32 quant = 3;
    required int32 value = 4;
}

message OrderAckS {
    required bool ack = 1;
    optional string msg = 2;
    required string nameI = 3;
}

message OrderAckI {
    required bool ack = 1;
    optional string msg = 2;
}

message SubS {
    repeated string subs = 1;
}

message SubN {
    repeated string subs = 1;
}

message ProductionS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
}

message ProductionM {
    required string nameP = 1;
    required int32 minimun = 2;
    required int32 maximun = 3;
    required int32 value = 4;
}

message ResultS {
    required bool result = 1;
    optional string msg = 2;
    required string nameI = 3;
}

message ResultI {
    required bool result = 1;
    optional string msg = 2;
}

message InfoS {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
    required string nameI = 7;
}
message InfoI {
    required string nameM = 1;
    required string nameP = 2;
    required int32 minimun = 3;
    required int32 maximun = 4;
    required int32 value = 5;
    required int32 period = 6;
}

/* -------------------------------------------------------------------------- */
